--- a/Python/Projetos/style.css
+++ b/Python/Projetos/style.css
@@ -40,7 +40,9 @@ body {
 }
 .corpo img {
     margin-top: 75px;
-    border-radius: 100px;
+    border-radius: 100%;
+    width: 250px;
+    height: 250px;
     margin-left: 170px;
     box-shadow: 20px 20px 30px;
 }
