Painel de Login "finalizada"

--- a/loucuras/painelLogin/registrar/resgistrar.css
+++ b/loucuras/painelLogin/registrar/resgistrar.css
@@ -28,12 +28,12 @@ body * {
 }
 
 .left-reg > h1 {
-    color: #77ffc0;
+    color: #ffd900e0;
     font-size: 2vw;
 }
 
 .left-reg-image {
-    width: 30vw;
+    width: 35vw;
 }
 
 .right-reg {
@@ -57,7 +57,8 @@ body * {
 }
 
 .card-reg > h1 {
-    color: #00ff88;
+    color: #FFD700;
+    text-shadow: 0px 0px 30px #FFD700;
     font-weight: 800;
     margin: 0;
 }
@@ -104,8 +105,8 @@ body * {
     font-weight: 800;
     letter-spacing: 3px;
     color: #2b134b;
-    background: #00ff88;
-    box-shadow: 0px 10px 40px -12px #00ff8052;
+    background: #FFD700;
+    box-shadow: 0px 10px 40px -12px #FFD700;
 }
 
 .btn-reg:hover {
@@ -119,7 +120,7 @@ body * {
 }
 
 .back-login > a {
-    color: #00ff88;
+    color: #FFD700;
     border-bottom: none;
 }
 
