--- a/loucuras/painelLogin/style.css
+++ b/loucuras/painelLogin/style.css
@@ -94,6 +94,19 @@ body * {
     color: #f0ffff94;
 }
 
+.textfield > div{
+    position: relative;
+}
+
+.textfield > i {
+    cursor: pointer;
+    left: 86%;
+    top: 51.5%;
+    position: absolute; 
+    font-size: 23px;
+    color: white;
+}
+
 .btn-login {
     width: 100%;
     padding: 16px 0px;
@@ -128,6 +141,15 @@ body * {
     font-size: 13pt;
 }
 
+@media only screen and (max-width: 1200px) {
+    .card-login{
+        width: 85%;
+    }
+    .textfield > i {
+        left: 89%;
+    }
+}
+
 @media only screen and (max-width: 950px) {
     .card-login{
         width: 85%;
@@ -141,6 +163,11 @@ body * {
 
     .left-login > h1 {
         display: none;
+    }
+
+    .textfield > i {
+        top: 65%;
+        left: 82.3%;
     }
 
     .left-login {
@@ -159,5 +186,26 @@ body * {
 
     .card-login {
         width: 90%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .textfield > i {
+        top: 63%;
+        left: 79%;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .textfield > i {
+        top: 64%;
+        left: 75%;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .textfield > i {
+        top: 53%;
+        left: 77%;
     }
 }
