--- a/.../.../.../Pedido de namoro/style.css
+++ b/.../.../.../Pedido de namoro/style.css
@@ -2,8 +2,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    top: 40%;
-    bottom: 50%;
+    top: 0;
     left: 0;
     text-align: center;
     background-color: rgba(0, 0, 0);
@@ -12,15 +11,21 @@ body {
 }
 h1 {
     letter-spacing: 2px;
-    font-size: 40px;
+    font-size: 70px;
 }
 button {
     color: rgb(255, 255, 255);
     background-color: rgb(48, 48, 255);
     border: none;
-    width: 80px;
-    padding: 10px;
+    width: 200px;
+    padding: 20px;
     border-radius: 5px;
     font-size: 20px;
-    margin: 0px 15px;
+    margin: 15px 15px;
+}
+
+@media only screen and (max-width: 320px){
+    h1 {
+        font-size: 35px;
+    }
 }
